# python-oop-project-101

./: Makefile  README.md  pyproject.toml  validator.py
validator/: __init__.py  validator.py
