[tool.poetry]
name = "hexlet-code"
packages = [{include = "python-oop-project-101"}]
version = "0.1.0"
description = ""
authors = ["Maksim Poltoradnev <kim1.5@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
