[tool.poetry]
name = "hexlet-code"
packages = [{include = "validator"}]
version = "0.1.0"
description = ""
authors = ["Maxim Poltoradnev <kim1.5@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
